# fastapi-test-insights

./: .flake8  .gitignore  .isort.cfg  .pylintrc  LICENSE  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  tasks.py
.github/workflows/: ci.yaml
app/: main.py  models.py
app/parsers/: junit.py
app/routes/: results.py
features/: hello.feature
tests/: conftest.py  test_hello.py
