[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "app"
version = "0.1.0"
description = "REST API to collect and serve test insights from junit.xml files"
authors = [
    { name = "Omar Crosby" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=1.10,<3.0",       # supports both v1 and upcoming v2
    "httpx",                      # for test clients
    "pytest",
    "pytest-bdd",
    "allure-pytest",
    "allure-python-commons"
]

[project.optional-dependencies]
dev = [
    "invoke",
    "black",
    "isort",
    "flake8",
    "isort",
    "mypy",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-bdd",
    "pytest-mock",
    "allure-pytest",
    "allure-pytest-bdd",
    "allure-python-commons"
]

[tool.flit.sdist]
include = [
    "app",
    "tests",
    "pyproject.toml",
    "README.md",
    "tasks.py"
]
